[gd_scene load_steps=6 format=3 uid="uid://enhanced_player_001"]

[ext_resource type="Script" path="res://scripts/EnhancedPlayer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://enhanced_helicopter_001" path="res://assets/helicopter_enhanced.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(70, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 80.0

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 1, 1, 0.8, 1, 1, 1, 0)

[node name="EnhancedPlayer" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1")
collision_layer = 1
collision_mask = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="WeaponPoint" type="Marker2D" parent="."]
position = Vector2(35, 0)

[node name="Shield" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.5, 0.8, 1, 0.5)

[node name="EngineParticles" type="CPUParticles2D" parent="."]
position = Vector2(-25, 0)
emitting = true
amount = 50
lifetime = 0.8
direction = Vector2(1, 0)
spread = 45.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -45.0
angular_velocity_max = 45.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.4
color = Color(0.8, 0.6, 0.2, 1)
color_ramp = SubResource("Gradient_1")

[node name="TrailParticles" type="CPUParticles2D" parent="."]
position = Vector2(-30, 0)
emitting = false
amount = 30
lifetime = 1.0
direction = Vector2(1, 0)
spread = 20.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector2(0, 0)
scale_amount_min = 0.2
scale_amount_max = 0.5
color = Color(0.2, 0.4, 0.8, 0.5)

[node name="AimLine" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color(1, 0, 0, 0.5)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)
zoom = Vector2(1, 1)